--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,8 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8">
                     <ul class="top-info text-center text-md-left">
-                        <li><i class="fas fa-map-marker-alt"></i> <p class="info-text">Rue XXX XXXX quartier Lomé, TOGO</p>
+                        <li><i class="fas fa-map-marker-alt"></i> <p class="info-text">Rue des Mimosas, non loin de ex Supermarché le Château
+Bè Souza Nétimé – BP 61951 Lomé – Togo</p>
                         </li>
                     </ul>
                 </div>
@@ -55,10 +56,10 @@
                 <div class="col-lg-4 col-md-4 top-social text-center text-md-right">
                     <ul class="list-unstyled">
                         <li>
-                        <a title="Facebook" href="https://facebbok.com" target="_blank">
+                        <a title="Facebook" href="https://www.facebook.com/QuantumTg" target="_blank">
                             <span class="social-icon"><i class="fab fa-facebook-f"></i></span>
                         </a>
-                        <a title="Twitter" href="https://twitter.com" target="_blank">
+                        <a title="Twitter" href="https://twitter.com/@TgQuantum" target="_blank">
                             <span class="social-icon"><i class="fab fa-twitter"></i></span>
                         </a>
                         <a title="Instagram" href="https://instagram.com" target="_blank">
@@ -68,7 +69,7 @@
                         <a title="Whatsapp" href="https://whatsapp.com" target="_blank">
                             <span class="social-icon"><i class="fab fa-whatsapp"></i></span>
                         </a>
-                        <a title="Linkedin" href="https://linkedin.com" target="_blank">
+                        <a title="Linkedin" href="https://www.linkedin.com/company/quantumtg" target="_blank">
                             <span class="social-icon"><i class="fab fa-linkedin"></i></span>
                         </a>
 
@@ -101,7 +102,7 @@
                             <div class="info-box">
                             <div class="info-box-content">
                                 <p class="info-box-title">Téléphone</p>
-                                <p class="info-box-subtitle">(+228) 90 XX XX XX</p>
+                                <p class="info-box-subtitle">+228 22 21 57 75</p>
                             </div>
                             </div>
                         </li>
@@ -109,7 +110,7 @@
                             <div class="info-box">
                             <div class="info-box-content">
                                 <p class="info-box-title">Email </p>
-                                <p class="info-box-subtitle">info@quantum.com</p>
+                                <p class="info-box-subtitle">contact@quantum-togo.com</p>
                             </div>
                             </div>
                         </li>
@@ -122,7 +123,7 @@
                             </div>
                         </li>
                         <li class="header-get-a-quote">
-                            <a class="btn btn-primary" href="contact.html">Contactez-nous</a>
+                            <a class="btn btn-primary" href="/contact">Contactez-nous</a>
                         </li>
                         </ul><!-- Ul end -->
                     </div><!-- header right end -->
@@ -227,7 +228,7 @@
                     <div class="col-lg-4">
                     <div class="subscribe-call-to-acton">
                         <h3>Besoins d'aide?</h3>
-                        <h4>(+228)90 XX XX XX</h4>
+                        <h4>+228 22 21 57 75</h4>
                     </div>
                     </div><!-- Col end -->
 
@@ -266,13 +267,12 @@
                             labore et dolore magna aliqua.</p>
                         <div class="footer-social">
                             <ul>
-                            <li><a href="https://facebook.com/themefisher" aria-label="Facebook"><i
+                            <li><a href="https://www.facebook.com/QuantumTg" aria-label="Facebook"><i
                                     class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="https://twitter.com/themefisher" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                            <li><a href="https://twitter.com/@TgQuantum" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                             </li>
-                            <li><a href="https://instagram.com/themefisher" aria-label="Instagram"><i
-                                    class="fab fa-instagram"></i></a></li>
-                            <li><a href="https://github.com/themefisher" aria-label="Github"><i class="fab fa-github"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/quantumtg" aria-label="LinkedIn"><i
+                                    class="fab fa-linkedin"></i></a></li>
                             </ul>
                         </div><!-- Footer social end -->
                         </div><!-- Col end -->
