--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -117,8 +117,8 @@
             <div class="row">
                 <div class="col-md-4">
                 <div class="form-group">
-                    <label>Nom</label>
-                    <input class="form-control form-control-name" name="name" id="name" placeholder="" type="text" required>
+                    <label>Nom et Prénoms</label>
+                    <input class="form-control form-control-name" name="fullName" id="fullName" placeholder="" type="text" required>
                 </div>
                 </div>
                 <div class="col-md-4">
@@ -129,12 +129,24 @@
                 </div>
                 </div>
                 <div class="col-md-4">
-                <div class="form-group">
-                    <label>Objet</label>
-                    <input class="form-control form-control-subject" name="subject" id="subject" placeholder="" required>
+                    <div class="form-group">
+                        <label>Téléphone</label>
+                        <input class="form-control " name="telephone" id="telephone" placeholder="" >
+                    </div>
                 </div>
-                </div>
+                
+              
             </div>
+            <div class="form-group">
+                <label>Entreprise</label>
+                <input class="form-control " name="entreprise" id="entreprise" placeholder="" >
+            </div>
+            
+            <div class="form-group">
+                <label>Objet</label>
+                <input class="form-control " name="objet" id="objet" placeholder="" required>
+            </div>
+
             <div class="form-group">
                 <label>Message</label>
                 <textarea class="form-control form-control-message" name="message" id="message" placeholder="" rows="10"
