--- a/templates/website/bon_a_savoir.html.twig
+++ b/templates/website/bon_a_savoir.html.twig
@@ -38,20 +38,28 @@
                         
                         <h3 class="border-title border-left mar-t0">Ce qu'il faut savoir</h3>
 
-                        <div class="accordion accordion-group accordion-classic" id="construction-accordion">
+                        <div class="accordion accordion-group" id="construction-accordion">
                             {% for savoir  in savoirs %}
+                                {% set show = '' %}
+                                {% set collapsed = '' %}
+                                {% if loop.first %}
+                                    {% set show = 'show' %}
+                                {% else %}
+                                    {% set collapsed = 'collapsed' %}
+                                {% endif %}
+
                            
                                 <div class="card">
                                     <div class="card-header p-0 bg-transparent" id="heading-{{savoir.id}}">
                                     <h2 class="mb-0">
-                                        <button class="btn btn-block text-left" type="button" data-toggle="collapse" data-target="#collapse-{{savoir.id}}"
-                                        aria-expanded=false aria-controls="collapse-{{savoir.id}}">
+                                        <button class="btn btn-block text-left {{collapsed}}" type="button" data-toggle="collapse" data-target="#collapse-{{savoir.id}}"
+                                        aria-expanded={{loop.first}} aria-controls="collapse-{{savoir.id}}">
                                         {{savoir.titre}}
                                         </button>
                                     </h2>
                                     </div>
 
-                                    <div id="collapse-{{savoir.id}}" class="collapse show" aria-labelledby="heading-{{savoir.id}}"
+                                    <div id="collapse-{{savoir.id}}" class="collapse {{show}}" aria-labelledby="heading-{{savoir.id}}"
                                     data-parent="#construction-accordion">
                                     <div class="card-body">
                                         {{savoir.contenu | raw}}
