--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3381,4 +3381,24 @@ label {
 }
 
 
+.btn-primary.disabled,.btn-primary:disabled {
+  color: #fff;
+  background-color: #DC8C33;
+  border-color: #DC8C33
+}
+
+.btn-primary:not(:disabled):not(.disabled).active,.btn-primary:not(:disabled):not(.disabled):active,.show>.btn-primary.dropdown-toggle {
+  color: #fff;
+  background-color: #DC8C33;
+  border-color: #DC8C33
+}
+
+.btn-primary:hover:active, .btn-primary:hover:focus,
+.btn-dark:hover:active,
+.btn-dark:hover:focus,
+.btn-white.btn-primary:hover:active,
+.btn-white.btn-primary:hover:focus {
+  color: #fff;
+  background-color: #DC8C33 !important;
+}
 /*# sourceMappingURL=style.css.map */
