--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -124,7 +124,7 @@
                                 <div class="info-box last">
                                 <div class="info-box-content">
                                     <p class="info-box-title">Certificat</p>
-                                    <p class="info-box-subtitle">ISO 9001:2017</p>
+                                    <p class="info-box-subtitle">ISO xxxx:xxxx</p>
                                 </div>
                                 </div>
                             </li>
@@ -315,7 +315,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-6">
                                 <div class="copyright-info">
-                                    <span>Copyright &copy; 2023,  Developed by <a href="https://viciconcept.com">VICICONCEPT</a></span>
+                                    <span>Copyright &copy; 2023,  Developed by <a href="https://viciconcept.com" style="color: #fff;">VICICONCEPT</a></span>
                                 </div>
                             </div>
 
