--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -132,7 +132,7 @@
                     <div class="col-md-4">
                         <div class="form-group">
                             <label>Téléphone</label>
-                            <input class="form-control " name="telephone" id="telephone" placeholder="" >
+                            <input class="form-control " name="telephone" id="telephone" placeholder="Exemple: +228 XX XX XX XX" >
                         </div>
                     </div>
                     
