--- a/templates/website/team/index.html.twig
+++ b/templates/website/team/index.html.twig
@@ -8,7 +8,16 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-lg-12">
-        <h3 class="section-sub-title">Notre équipe de travail</h3>
+        <h3 class="section-sub-title"     style="margin-bottom: 10px !important;">
+        Notre équipe de travail
+        </h3>
+        <p class="" style="
+            font-size: 27px;
+            line-height: 36px;
+            margin-bottom: 60px;
+        ">
+          Une équipe disponible et attentive à votre écoute
+        </p>
       </div>
     </div>
     <!--/ Title row end -->
